<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.NewsListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/articles_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAlignment="center"
            tools:text="Total number of articles: 4000"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/result_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello_blank_fragment" />
    </LinearLayout>




    <com.github.clans.fab.FloatingActionMenu
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:menu_fab_label="@string/filter_results"
        app:menu_icon="@drawable/ic_filter">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/filter_all_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:src="@drawable/ic_all"
            app:fab_colorNormal="@android:color/holo_green_dark"
            app:fab_colorPressed="@android:color/holo_green_light"
            app:fab_label="@string/filter_all_articles" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/filter_top_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:src="@drawable/ic_star"
            app:fab_colorNormal="@android:color/holo_blue_dark"
            app:fab_colorPressed="@android:color/holo_blue_light"
            app:fab_elevationCompat="8dp"
            app:fab_label="@string/filter_headlines" />

    </com.github.clans.fab.FloatingActionMenu>

</FrameLayout>