<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.GeneralFilterFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/query_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <EditText
            android:id="@+id/query_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/query_hint"
            android:importantForAutofill="no" />
    </android.support.design.widget.TextInputLayout>


    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/query_input" />

    <Spinner
        android:id="@+id/sort_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_spinner" />

    <TextView
        android:id="@+id/from_date_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/from_date_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/from_date_button"
        tools:text="2019-05-16"/>

    <Button
        android:id="@+id/from_date_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/change_date"
        app:layout_constraintStart_toEndOf="@+id/from_date_info"
        app:layout_constraintTop_toBottomOf="@+id/from_label" />

    <TextView
        android:id="@+id/from_time_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/from_time_button"
        app:layout_constraintEnd_toEndOf="@+id/from_date_info"
        app:layout_constraintStart_toStartOf="@+id/from_date_info"
        app:layout_constraintTop_toTopOf="@+id/from_time_button"
        tools:text="13:23:58"/>

    <Button
        android:id="@+id/from_time_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_time"
        app:layout_constraintEnd_toEndOf="@+id/from_date_button"
        app:layout_constraintStart_toStartOf="@+id/from_date_button"
        app:layout_constraintTop_toBottomOf="@+id/from_date_button" />

    <TextView
        android:id="@+id/from_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/from"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_spinner" />

    <TextView
        android:id="@+id/to_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/to"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_time_button" />

    <TextView
        android:id="@+id/to_date_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/to_date_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/to_date_button"
        tools:text="2019-05-20"/>

    <Button
        android:id="@+id/to_date_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/change_date"
        app:layout_constraintStart_toEndOf="@+id/to_date_info"
        app:layout_constraintTop_toBottomOf="@+id/to_label" />

    <TextView
        android:id="@+id/to_time_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/to_time_button"
        app:layout_constraintEnd_toEndOf="@+id/to_date_info"
        app:layout_constraintStart_toStartOf="@+id/to_date_info"
        app:layout_constraintTop_toTopOf="@+id/to_time_button"
        tools:text="13:34:00"/>

    <Button
        android:id="@+id/to_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_time"
        app:layout_constraintEnd_toEndOf="@+id/to_date_button"
        app:layout_constraintStart_toStartOf="@+id/to_date_button"
        app:layout_constraintTop_toBottomOf="@+id/to_date_button" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_time_button" />

</android.support.constraint.ConstraintLayout>